--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=faeng.cn
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
