--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-
-SITE_NAME_HEADER=Digital Garden
+THEME=https://raw.githubusercontent.com/kognise/obsidian-atom/HEAD/theme.css
+BASE_THEME=dark
+SITE_NAME_HEADER=一刀
 SITE_BASE_URL=faeng.cn
 dgHomeLink=true
 dgPassFrontmatter=false
@@ -10,4 +11,4 @@ dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
-dgShowTags=false
+dgShowTags=true
